Proportionnal hoshis to avoid hoshis as big as stone on small devices.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -333,10 +333,10 @@ body {
     z-index: -999;
     top: 50%;
     left: 50%;
-    height: 6px;
-    width: 6px;
-    margin-top: -3px;
-    margin-left: -3px;
+    height: 20%;
+    width: 20%;
+    margin-top: -10%;
+    margin-left: -10%;
     border-radius: 50%;
 }
 .gt {
